# actix-train-ticket

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  index.yaml  mychart-0.0.10.tgz  mychart-0.0.11.tgz  mychart-0.0.12.tgz  mychart-0.0.13.tgz  mychart-0.0.14.tgz  mychart-0.0.15.tgz  mychart-0.0.16.tgz  mychart-0.0.17.tgz  mychart-0.0.9.tgz  nohup.out
.cargo/: config
.github/workflows/: aliyun.yml  main.yml
.helm/config/: values.yaml
.helm/config/templates/: deployment.yaml
config/: values.yaml
config/templates/: ingress.yaml
src/: city_list.rs  main.rs  search_city_list.rs
