[package]
name = "actix-train-ticket"
version = "2.0.0"
authors = ["anthhub <anthhub@163.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"
actix-cors = "0.2.0"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"

serde_json = "1.0.55"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
pinyin = "0.7"
regex = "1"


[source.crates-io]
registry = "https://github.com/rust-lang/crates.io-index"
replace-with = 'ustc'

[source.ustc]
registry = "https://mirrors.ustc.edu.cn/crates.io-index"